# claudehud

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  bench-results.md  install.ps1  install.sh  mise.toml  skills-lock.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml  scorecard.yml  test-installer-windows.yml
claudehud/: Cargo.toml
claudehud-daemon/: Cargo.toml
claudehud-daemon/src/: cache.rs  git_extra.rs  main.rs  poll.rs  registrar.rs  segments.rs  status.rs  update.rs  watcher.rs
claudehud/src/: doctor.rs  fmt.rs  git.rs  incidents.rs  input.rs  install.rs  lib.rs  main.rs  notice.rs  orchestrate.rs  render.rs  segments.rs  time.rs  update.rs
claudehud/tests/: e2e_incidents.rs  e2e_orchestrate.rs
common/: Cargo.toml
common/src/: config.rs  incidents.rs  lib.rs  notice.rs  segments.rs  seqlock.rs  version.rs
docs/adr/: 0001-silent-degradation.md
docs/superpowers/plans/: 2026-04-14-cc-statusline-rust-rewrite.md  2026-04-16-status-incidents.md  2026-04-17-claudehud-install-subcommand.md  2026-05-08-condensed-layout-mode.md  2026-05-11-usage-sqlite-database.md  2026-05-11-windows-support.md  2026-05-12-claudehud-doctor.md  2026-05-12-git-ahead-behind-rebase-state.md  2026-05-12-pipe-extension-segments.md  2026-06-13-daemon-autoupdate.md  2026-06-13-worktree-and-bg-agent-support.md
docs/superpowers/specs/: 2026-04-16-status-incidents-design.md  2026-04-17-claudehud-install-subcommand-design.md  2026-05-08-condensed-mode-design.md  2026-05-11-usage-sqlite-design.md  2026-05-11-windows-support-design.md  2026-05-12-claudehud-doctor.md  2026-05-12-git-ahead-behind-rebase-state.md  2026-05-12-pipe-extension-segments.md  (+2 more)
