[workspace]
members = ["common", "claudehud", "claudehud-daemon"]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.7"
edition = "2021"

[workspace.dependencies]
common = { path = "common" }
memmap2 = "0.9"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
