[package]
name = "claudehud-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
memmap2 = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
notify = "6"
crossbeam-channel = "0.5"
ureq = { version = "2", default-features = false, features = ["tls"] }
roxmltree = "0.20"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
