[package]
name = "claudehud"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "claudehud"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
memmap2 = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["local-offset"] }
