[package]
name = "claudehud"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "claudehud"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
memmap2 = { workspace = true }
pico-args = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
time = { version = "0.3", features = ["local-offset"] }

[dev-dependencies]
tempfile = "3"
